cambios config y nuevo alumno
modificación deel archivo config actualizado para la base de datos virtual
modifiqué las vistas del archivo de nuevo alumno, pero aun me falta el proceso para que suba bien el alumno

--- a/vistas/cabecera.html
+++ b/vistas/cabecera.html
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="index.php">Listado</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="nuevos_datos.php">Nuevos datos</a>
+                        <a class="nav-link" href="nuevos_datos.php">Nuevo alumno</a>
                       </li>                 
                         </ul>
                       </div>
