modifiqué los nombres de los archivos

--- a/vistas/cabecera.html
+++ b/vistas/cabecera.html
@@ -16,10 +16,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.php">Listado</a>
+                        <a class="nav-link" href="listado_alumnos.php">Listado alumnos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="nuevos_datos.php">Nuevo alumno</a>
+                        <a class="nav-link" href="nuevo_alumno.php">Nuevo alumno</a>
                       </li>                 
                         </ul>
                       </div>
