--- a/vistas/nuevo_alumno.html
+++ b/vistas/nuevo_alumno.html
@@ -1,6 +1,6 @@
 <?php include "cabecera.html";?>
 <div class="container mt-4">
-    <form action="nuevos_datos_proceso.php" method="post">
+    <form action="nuevo_alumno_proceso.php" method="post">
         <table id="la_tabla" class="table table-striped" >
             <!--Esto es un boceto, tenemos que ver de ponerle lo de "required" a todo lo que sea necesario, y que algunas secciones aparezcan disponibles cuando la anterior la respuesta sea un "si", y demás cosas así
             -->
