--- a/vistas/nuevo_alumno.html
+++ b/vistas/nuevo_alumno.html
@@ -1,4 +1,23 @@
 <?php include "cabecera.html";?>
+<script>
+  function mostrar_columna(asistencia) {
+    if (asistencia === 'si') {
+      document.getElementById('asistencia-si').style.display = 'table-row';
+      document.getElementById('asistencia-no').style.display = 'none';
+    } else if (asistencia === 'no') {
+      document.getElementById('asistencia-si').style.display = 'none';
+      document.getElementById('asistencia-no').style.display = 'table-row';
+    }
+  }
+  
+	function mostrar_ocupado(ocupado) {
+    if (ocupado === 'emp') {
+      document.getElementById('ocupado-si').style.display = 'table-row';
+    } else {
+    document.getElementById('ocupado-si').style.display = 'none';
+  }
+}
+</script>
 <div class="container mt-4">
     <form action="nuevo_alumno_proceso.php" method="post">
         <table id="la_tabla" class="table table-striped" >
@@ -16,29 +35,37 @@
                 <th>Fecha de atención</th>
                 <td><input type="date" name="fecha_atencion" class="form-control"></td>
             </tr>
-            <tr>
-                <th>Asistencia</th>
-                <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="asistencia">
-                    <option>Si</option>
-                    <option>No</option>
-                </select></td>
-            </tr>
-            <tr>
-                <th>En caso de asistencia</th>
-                <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_asistencia">
-                    <option>PRESENCIAL</option>
-                    <option>TELEFÓNICA</option>
-                    <option>EMAIL</option>
-                </select></td>
-            </tr>
-            <tr>
-                <th>En caso de ausencia</th>
-                <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_ausencia">
-                    <option>CAUSA DEL ORIENTADOR</option>
-                    <option>JUSTIFICADA</option>
-                </select></td>
-            </tr>
-            <tr>
+           <tr>
+				<th>Asistencia</th>
+			<td>
+				<select class="form-select form-select-sm" aria-label=".form-select-lg example" name="asistencia" id="asistencia" onchange="mostrar_columna(this.value)">
+					<option selected>...</option>
+					<option value="si">Si</option>
+					<option value="no">No</option>
+				</select>
+			</td>
+			</tr>
+
+			<tr id="asistencia-si" style="display:none;">
+				<th>En caso de asistencia</th>
+			<td>
+				<select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_asistencia">
+					<option>PRESENCIAL</option>
+					<option>TELEFÓNICA</option>
+					<option>EMAIL</option>
+				</select>
+			</td>
+			</tr>
+
+			<tr id="asistencia-no" style="display:none;">
+			<th>En caso de ausencia</th>
+			<td>
+				<select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_ausencia">
+					<option>CAUSA DEL ORIENTADOR</option>
+					<option>JUSTIFICADA</option>
+				</select>
+			</td>
+			</tr>
                 <th>Sexo</th>
                 <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="sexo">
                     <option>Mujer</option>
@@ -72,9 +99,19 @@
                 <td><input type="text" name="edad" class="form-control" ></td>
             </tr>
             <tr>
-                <th>Carnet de conducir</th> <!--Puse lo del carnet tal cual aparecía en el archivo, pero igual deberiamos hacer aqui un selec con si y no, que en caso de si especificar en otra sección cuales carnets-->
-                <td><input type="text" name="carnet" class="form-control"></td>
-            </tr>
+			<th>Carnet de conducir</th>
+			<td>
+				<label><input type="checkbox" name="carnet[]" value="A1"> A1</label>
+				<label><input type="checkbox" name="carnet[]" value="A2"> A2</label>
+				<label><input type="checkbox" name="carnet[]" value="B1"> B1</label>
+				<label><input type="checkbox" name="carnet[]" value="B2"> B2</label>
+				<label><input type="checkbox" name="carnet[]" value="C1"> C1</label>
+				<label><input type="checkbox" name="carnet[]" value="C2"> C2</label>
+    <!-- Esta parte hay que mejorarla y hacer que no se pueda marcar lo de no tengo carnet a la vez que los carnets -->
+    <br>
+				<label><input type="checkbox" name="carnet[]" value="no"> No tengo carnet de conducir</label>
+			</td>
+			</tr>
             <tr>
                 <th>Vehículo</th> <!--Esta opción quiero poner que aparezca disponible o que aparezca cuando en carnet de conducir aparezca algo-->
                 <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="vehiculo">
@@ -100,12 +137,12 @@
             </tr>
             <tr>
                 <th>Situación actual</th>
-                <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="situacion">
-                    <option>DESEMPLEADO</option>
-                    <option>OCUPADO</option>
+                <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="situacion" onchange="mostrar_ocupado(this.value)">
+                    <option value="des">DESEMPLEADO</option>
+                    <option value="emp">OCUPADO</option>
                 </select></td>
             </tr>
-            <tr>
+            <tr id="ocupado-si" style="display:none;">
                 <th>En caso de ocupado</th> <!-- Esta opción quiero ponerla como que aparezca solo cuando OCUPADO esté seleccionado-->
                 <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="caso_ocupado">
                     <option>RXSS</option>
@@ -124,6 +161,10 @@
         <button type="submit" class="btn btn-outline-success">Enviar</button>
 
     </form> 
+</div>
+    
+
+<?php include "pie.html";?>
 </div>
     
 
