--- a/vistas/nuevo_alumno.html
+++ b/vistas/nuevo_alumno.html
@@ -11,7 +11,7 @@
   }
   
 	function mostrar_ocupado(ocupado) {
-    if (ocupado === 'empleado') {
+    if (ocupado === 'Empleado') {
       document.getElementById('ocupado-si').style.display = 'table-row';
     } else {
     document.getElementById('ocupado-si').style.display = 'none';
@@ -140,8 +140,8 @@
             <tr>
                 <th>Situación actual</th>
                 <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="situacion" onchange="mostrar_ocupado(this.value)">
-                    <option value="desempleado">DESEMPLEADO</option>
-                    <option value="empleado">OCUPADO</option>
+                    <option value="Desempleado">DESEMPLEADO</option>
+                    <option value="Empleado">OCUPADO</option>
                 </select></td>
             </tr>
             <tr id="ocupado-si" style="display:none;">
