--- a/vistas/nuevo_alumno.html
+++ b/vistas/nuevo_alumno.html
@@ -11,7 +11,7 @@
   }
   
 	function mostrar_ocupado(ocupado) {
-    if (ocupado === 'Empleado') {
+    if (ocupado === 'empleado') {
       document.getElementById('ocupado-si').style.display = 'table-row';
     } else {
     document.getElementById('ocupado-si').style.display = 'none';
@@ -51,9 +51,9 @@
 			<td>
 				<select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_asistencia">
 					<option> </option>
-					<option>PRESENCIAL</option>
-					<option>TELEFÓNICA</option>
-					<option>EMAIL</option>
+					<option>Presencial</option>
+					<option>Telefonica</option>
+					<option>Email</option>
 				</select>
 			</td>
 			</tr>
@@ -63,8 +63,8 @@
 			<td>
 				<select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_ausencia">
 					<option> </option>
-					<option>CAUSA DEL ORIENTADOR</option>
-					<option>JUSTIFICADA</option>
+					<option>Causa del orientador</option>
+					<option>Justificada</option>
 				</select>
 			</td>
 			</tr>
@@ -84,16 +84,16 @@
             <tr>
                 <th>Nivel de estudios</th>
                 <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="nivel_estudios">
-                    <option>SIN ESTUDIOS</option>
+                    <option>Sin estudios</option>
                     <option>EGB</option>
                     <option>ESO</option>
-                    <option>BACHILLER</option>
-                    <option>FP MEDIO</option>
-                    <option>FP SUPERIOR</option>
-                    <option>DIPLOMATURA</option>
-                    <option>LICENCIATURA</option>
-                    <option>MASTER</option>
-                    <option>DOCTORADO</option>
+                    <option>Bachiller</option>
+                    <option>FP medio</option>
+                    <option>FP superior</option>
+                    <option>Diplomatura</option>
+                    <option>Licenciatura</option>
+                    <option>Master</option>
+                    <option>Doctorado</option>
                 </select></td>
             </tr>
             <tr>
@@ -140,8 +140,8 @@
             <tr>
                 <th>Situación actual</th>
                 <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="situacion" onchange="mostrar_ocupado(this.value)">
-                    <option value="Desempleado">DESEMPLEADO</option>
-                    <option value="Empleado">OCUPADO</option>
+                    <option value="Desempleado">Desempleado</option>
+                    <option value="Empleado">Ocupado</option>
                 </select></td>
             </tr>
             <tr id="ocupado-si" style="display:none;">
