funcionan los filtros regular
creacion de listado_filtrado
creacion de estilos vinculado a todas las paginas desde la cabecera.html

--- a/vistas/listado_alumnos_filtrado.html
+++ b/vistas/listado_alumnos_filtrado.html
@@ -30,7 +30,7 @@
             </select>
          </div>
          <div class="col-sm-1">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
+            <button class="btn btn-outline-success" type="submit" >Buscar</button>
          </div>
          <div class="col-sm-2">
             <a class="btn btn-success" href="listado_alumnos.php">Borrar filtros</a>
@@ -61,7 +61,7 @@
                     <td></td>             
                 </tr>
                 <?php foreach($listado_alumnos as $alumno){
-                    ?>
+                    if(in_array($sexo, $alumno) && in_array( $situacion_laboral,$alumno) && $edad == 1 && $alumno["Edad"] < 35){ ?>
                     <tr>
                         <td><?= $alumno["Apellidos"]; ?></td>
                         <td><?= $alumno["Nombre"]; ?></td>
@@ -81,11 +81,49 @@
                         <td><?= $alumno["Tipo_atencion"]; ?></td>
                         <td><?= $alumno["Discapacidad"]; ?></td>
                     </tr>
-                    <?php  } ?>   
-    </div>
-        <table id="tabli" class="table table-striped" >
-        </table>
-            
+                    <?php  }if(in_array($sexo, $alumno) && in_array( $situacion_laboral,$alumno) && $edad == 2 && $alumno["Edad"] > 35 && $alumno["Edad"] < 60){?>
+                        <tr>
+                            <td><?= $alumno["Apellidos"]; ?></td>
+                            <td><?= $alumno["Nombre"]; ?></td>
+                            <td><?= $alumno["Sexo"]; ?></td>
+                            <td><?= $alumno["Edad"]; ?></td>
+                            <td><?= $alumno["Situacion"]; ?></td>
+                            <td><?= $alumno["Ocupado"]; ?></td>
+                            <td><?= $alumno["Fecha_atencion"]; ?></td>
+                            <td><?= $alumno["Asistencia"]; ?></td>
+                            <td><?= $alumno["Info_asistencia"]; ?></td>
+                            <td><?= $alumno["Info_ausencia"]; ?></td>
+                            <td><?= $alumno["Prestacion"]; ?></td>
+                            <td><?= $alumno["Nivel_estudios"]; ?></td>
+                            <td><?= $alumno["Carnet"]; ?></td>
+                            <td><?= $alumno["Vehiculo"]; ?></td>
+                            <td><?= $alumno["Tipo_entrevista"]; ?></td>
+                            <td><?= $alumno["Tipo_atencion"]; ?></td>
+                            <td><?= $alumno["Discapacidad"]; ?></td>
+                        </tr>
+                    <?php  }if(in_array($sexo, $alumno) && in_array( $situacion_laboral,$alumno) && $edad == 3 && $alumno["Edad"] > 59){?>
+                        <tr>
+                            <td><?= $alumno["Apellidos"]; ?></td>
+                            <td><?= $alumno["Nombre"]; ?></td>
+                            <td><?= $alumno["Sexo"]; ?></td>
+                            <td><?= $alumno["Edad"]; ?></td>
+                            <td><?= $alumno["Situacion"]; ?></td>
+                            <td><?= $alumno["Ocupado"]; ?></td>
+                            <td><?= $alumno["Fecha_atencion"]; ?></td>
+                            <td><?= $alumno["Asistencia"]; ?></td>
+                            <td><?= $alumno["Info_asistencia"]; ?></td>
+                            <td><?= $alumno["Info_ausencia"]; ?></td>
+                            <td><?= $alumno["Prestacion"]; ?></td>
+                            <td><?= $alumno["Nivel_estudios"]; ?></td>
+                            <td><?= $alumno["Carnet"]; ?></td>
+                            <td><?= $alumno["Vehiculo"]; ?></td>
+                            <td><?= $alumno["Tipo_entrevista"]; ?></td>
+                            <td><?= $alumno["Tipo_atencion"]; ?></td>
+                            <td><?= $alumno["Discapacidad"]; ?></td>
+                        </tr>
+                    <?php  }}?>
+                </table>
+
 </div>
 
 <?php include "pie.html";?>
