boton editar alumno
añadí el boton al listado y funciona correctamente

--- a/vistas/listado_alumnos.html
+++ b/vistas/listado_alumnos.html
@@ -80,6 +80,7 @@
                         <td><?= $alumno["Tipo_entrevista"]; ?></td>
                         <td><?= $alumno["Tipo_atencion"]; ?></td>
                         <td><?= $alumno["Discapacidad"]; ?></td>
+                        <td><a href="edita_alumno.php?id=<?= $alumno['id']?>" class="btn btn-outline-primary btn-sm">Editar</a></td>
                     </tr>
                     <?php  } ?>   
     </div>
