--- a/vistas/edita_alumno.html
+++ b/vistas/edita_alumno.html
@@ -1,23 +1,31 @@
 <?php include "cabecera.html";?>
 <script>
-  function mostrar_columna(asistencia) {
-    if (asistencia === 'si') {
-      document.getElementById('asistencia-si').style.display = 'table-row';
-      document.getElementById('asistencia-no').style.display = 'none';
-    } else if (asistencia === 'no') {
-      document.getElementById('asistencia-si').style.display = 'none';
-      document.getElementById('asistencia-no').style.display = 'table-row';
+    function mostrar_columna(asistencia) {
+      if (asistencia === 'Si') {
+        document.getElementById('asistencia-si').style.display = 'table-row';
+        document.getElementById('asistencia-no').style.display = 'none';
+      } else if (asistencia === 'No') {
+        document.getElementById('asistencia-si').style.display = 'none';
+        document.getElementById('asistencia-no').style.display = 'table-row';
+      }
+    }
+    
+      function mostrar_ocupado(ocupado) {
+      if (ocupado === 'empleado') {
+        document.getElementById('ocupado-si').style.display = 'table-row';
+      } else {
+      document.getElementById('ocupado-si').style.display = 'none';
     }
   }
-  
-	function mostrar_ocupado(ocupado) {
-    if (ocupado === 'empleado') {
-      document.getElementById('ocupado-si').style.display = 'table-row';
-    } else {
-    document.getElementById('ocupado-si').style.display = 'none';
-  }
-}
-</script>
+  function mostrar_carnet(carnet) {
+      if (carnet === 'Si') {
+        document.getElementById('carnet-si').style.display = 'table-row';
+        document.getElementById("carnet").value = "";
+      } else if (carnet === 'No') {
+        document.getElementById('carnet-si').style.display = 'none';
+      }
+    }
+  </script>
 <div class="container mt-4">
     <form action="edita_alumno_proceso.php" method="post">
         <table id="la_tabla" class="table table-striped" >
@@ -25,23 +33,22 @@
             -->
             <tr>
                 <th>Apellidos</th>
-                <td><input type="text" name="apellidos" class="form-control"value="<?php echo $datos_usuario["Apellidos"]; ?>"></td>
+                <td><input type="text" name="apellidos" class="form-control"value='<?php echo $datos_usuario["Apellidos"]; ?>'></td>
             </tr>
             <tr>
                 <th>Nombre</th>
-                <td><input type="text" name="nombre" class="form-control" value="<?php echo $datos_usuario["Nombre"]; ?>" ></td>
+                <td><input type="text" name="nombre" class="form-control" value='<?php echo $datos_usuario["Nombre"]; ?>' ></td>
             </tr>
             <tr>
                 <th>Fecha de atención</th>
-                <td><input type="date" name="fecha_atencion" class="form-control" value="<?php echo $datos_usuario["Fecha_atencion"]; ?>"></td>
+                <td><input type="date" name="fecha_atencion" class="form-control" value='<?php echo $datos_usuario["Fecha_atencion"]; ?>'></td>
             </tr>
             <tr>
             <th>Asistencia</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="asistencia" id="asistencia" onchange="mostrar_columna(this.value)">
-                    <option selected><?php echo $datos_usuario["Asistencia"]; ?></option>
-                    <option value="si">Si</option>
-                    <option value="no">No</option>
+                    <option value="Si" <?php if("Si" == $datos_usuario["Asistencia"]){ echo "selected";}?> >Si</option>
+					<option value="No" <?php if("No" == $datos_usuario["Asistencia"]){ echo "selected";}?> >No</option>
                 </select>
             </td>
         </tr>
@@ -49,10 +56,9 @@
             <th>En caso de asistencia</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_asistencia">
-                    <option><?php echo $datos_usuario["Tipo_asistencia"]; ?></option>
-                    <option>Presencial</option>
-                    <option>Telefonica</option>
-                    <option>Email</option>
+                    <option value="Presencial" <?php if("Presencial" == $datos_usuario["Info_asistencia"]){ echo "selected";}?> >Presencial</option>
+                    <option value="Telefonica" <?php if("Telefonica" == $datos_usuario["Info_asistencia"]){ echo "selected";}?> >Telefonica</option>
+                    <option value="Email" <?php if("Email" == $datos_usuario["Info_asistencia"]){ echo "selected";}?> >Email</option>
                 </select>
             </td>
         </tr>
@@ -60,9 +66,8 @@
             <th>En caso de ausencia</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_ausencia">
-                    <option><?php echo $datos_usuario["Tipo_ausencia"]; ?></option>
-                    <option>Causa del orientador</option>
-                    <option>Justificada</option>
+                    <option value="Causa del orientador" <?php if("Causa del orientador" == $datos_usuario["Info_ausencia"]){ echo "selected";}?> >Causa del orientador</option>
+                    <option value="Justificada" <?php if("Justificada" == $datos_usuario["Info_ausencia"]){ echo "selected";}?> >Justificada</option>
                 </select>
             </td>
         </tr>
@@ -70,9 +75,8 @@
             <th>Sexo</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="sexo">
-                    <option selected><?php echo $datos_usuario["Sexo"]; ?></option>
-                    <option>Mujer</option>
-                    <option>Hombre</option>
+                    <option value="Mujer" <?php if("Mujer" == $datos_usuario["Sexo"]){ echo "selected";}?> >Mujer</option>
+                    <option value="Hombre" <?php if("Hombre" == $datos_usuario["Sexo"]){ echo "selected";}?>>Hombre</option>
                 </select>
             </td>
         </tr>
@@ -80,9 +84,8 @@
             <th>Prestación</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="prestacion">
-                    <option selected><?php echo $datos_usuario["Prestacion"]; ?></option>
-                    <option>Si</option>
-                    <option>No</option>
+                    <option value="Si" <?php if("Si" == $datos_usuario["Prestacion"]){ echo "selected";}?> >Si</option>
+                    <option value="No" <?php if("Si" == $datos_usuario["Prestacion"]){ echo "selected";}?> >No</option>
                 </select>
             </td>
         </tr>
@@ -90,17 +93,16 @@
             <th>Nivel de estudios</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="nivel_estudios">
-                    <option selected><?php echo $datos_usuario["Nivel_estudios"]; ?></option>
-                    <option>Sin estudios</option>
-                    <option>EGB</option>
-                    <option>ESO</option>
-                    <option>Bachiller</option>
-                    <option>FP medio</option>
-                    <option>FP superior</option>
-                    <option>Diplomatura</option>
-                    <option>Licenciatura</option>
-                    <option>Master</option>
-                    <option>Doctorado</option>
+                    <option value="Sin estudios" <?php if("Sin estudios" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?> >Sin estudios</option>
+                    <option value="EGB" <?php if("EGB" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?> >EGB</option>
+                    <option value="ESO" <?php if("ESO" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?> >ESO</option>
+                    <option value="Bachiller" <?php if("Bachiller" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?>>Bachiller</option>
+                    <option value="FP medio" <?php if("FP medio" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?>>FP medio</option>
+                    <option value="FP superior" <?php if("FP superior" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?>>FP superior</option>
+                    <option value="Diplomatura" <?php if("Diplomatura" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?>>Diplomatura</option>
+                    <option value="Licenciatura" <?php if("Licenciatura" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?>>Licenciatura</option>
+                    <option value="Master" <?php if("Master" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?>>Master</option>
+                    <option value="Doctorado" <?php if("Doctorado" == $datos_usuario["Nivel_estudios"]){ echo "selected";}?>>Doctorado</option>
                 </select>
             </td>
         </tr>
@@ -109,18 +111,30 @@
             <td><input type="text" name="edad" class="form-control" value="<?php echo $datos_usuario["Edad"]; ?>"></td>
         </tr>
         <tr>
-    <th>Carnet de conducir</th>
-    <td>
-       <!--la parte del carnet no tengo ni idea de como se hace :(
-            -->
-    </td>
-</tr>
+            <th>Carnet de conducir</th>
+            <td>
+                <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="carnet[]" id="carnet" onchange="mostrar_carnet(this.value)">
+                    <option value="No" <?php if("No" == $datos_usuario["Carnet"]){ echo "selected";}?> >No</option>
+                    <option value="Si" <?php if("Si" == $datos_usuario["Carnet"]){ echo "selected";}?> >Si</option>
+                </select>
+            </td>
+        </tr>
+        <tr id="carnet-si" style="display:none;">
+            <th>Tipo de carnet</th>
+            <td>
+                <label><input type="checkbox" name="carnet[]" value="A1"> A1</label>
+                <label><input type="checkbox" name="carnet[]" value="A2"> A2</label>
+                <label><input type="checkbox" name="carnet[]" value="B1"> B1</label>
+                <label><input type="checkbox" name="carnet[]" value="B2"> B2</label>
+                <label><input type="checkbox" name="carnet[]" value="C1"> C1</label>
+                <label><input type="checkbox" name="carnet[]" value="C2"> C2</label>
+            </td>
+        </tr>
             <th>Vehículo</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="vehiculo">
-                    <option selected><?php echo $datos_usuario["Vehiculo"];?></option>
-                    <option>Si</option>
-                    <option>No</option>
+                    <option value="Si" <?php if("Si" == $datos_usuario["Vehiculo"]){ echo "selected";}?> >Si</option>
+                    <option value="No" <?php if("No" == $datos_usuario["Vehiculo"]){ echo "selected";}?> >No</option>
                 </select>
             </td>
         </tr>
@@ -128,10 +142,9 @@
             <th>Tipo de entrevista</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="entrevista">
-                    <option selected><?php echo $datos_usuario["Tipo_entrevista"];?></option>
-                    <option>No IPI</option>
-                    <option>IPI</option>
-                    <option>IPI GX</option>
+                    <option value="No IPI" <?php if("No IPI" == $datos_usuario["Tipo_entrevista"]){ echo "selected";}?> >No IPI</option>
+                    <option value="IPI" <?php if("IPI" == $datos_usuario["Tipo_entrevista"]){ echo "selected";}?> >IPI</option>
+                    <option value="IPI GX" <?php if("IPI GX" == $datos_usuario["Tipo_entrevista"]){ echo "selected";}?> >IPI GX</option>
                 </select>
             </td>
         </tr>
@@ -139,10 +152,9 @@
             <th>Tipo de atención</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_atencion">
-                    <option selected><?php echo $datos_usuario["Tipo_atencion"];?></option>
-                    <option>AP</option>
-                    <option>IPI</option>
-                    <option>IPI GX</option>
+                    <option value="AP" <?php if("AP" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >AP</option>
+                    <option value="IPI" <?php if("IPI" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >IPI</option>
+                    <option value="IPI GX" <?php if("IPI GX" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >IPI GX</option>
                 </select>
             </td>
         </tr>
@@ -150,9 +162,8 @@
             <th>Situación actual</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="situacion" onchange="mostrar_ocupado(this.value)">
-                    <option selected><?php echo $datos_usuario["Situacion"];?></option>
-                    <option value="Desempleado">Desempleado</option>
-                    <option value="Empleado">Ocupado</option>
+                    <option value="Desempleado" <?php if("Desempleado" == $datos_usuario["Situacion"]){ echo "selected";}?> >Desempleado</option>
+                    <option value="Empleado" <?php if("Empleado" == $datos_usuario["Situacion"]){ echo "selected";}?> >Ocupado</option>
                 </select>
             </td>
         </tr>
@@ -160,10 +171,9 @@
             <th>En caso de ocupado</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="caso_ocupado">
-                    <option selected><?php echo $datos_usuario["Caso_ocupado"];?></option>
-                    <option>RXSS</option>
-                    <option>RETA</option>
-                    <option>ORE</option>
+                    <option value="RXSS" <?php if("RXSS" == $datos_usuario["Ocupado"]){ echo "selected";}?> >RXSS</option>
+                    <option value="RETA" <?php if("RETA" == $datos_usuario["Ocupado"]){ echo "selected";}?> >RETA</option>
+                    <option value="ORE" <?php if("ORE" == $datos_usuario["Ocupado"]){ echo "selected";}?> >ORE</option>
                 </select>
             </td>
         </tr>
@@ -171,9 +181,8 @@
             <th>Discapacidad</th>
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="discapacidad">
-                    <option selected><?php echo $datos_usuario["Discapacidad"];?></option>
-                    <option>Si</option>
-                    <option>No</option>
+                    <option value="Si" <?php if("Si" == $datos_usuario["Discapacidad"]){ echo "selected";}?> >Si</option>
+                    <option value="No" <?php if("No" == $datos_usuario["Discapacidad"]){ echo "selected";}?> >No</option>
                 </select>
             </td>
         </tr>
