arreglado tipo ausencia nuevo y añadir alumno
faltaban opciones del TIpo de ausencia

--- a/vistas/edita_alumno.html
+++ b/vistas/edita_alumno.html
@@ -68,6 +68,9 @@
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_ausencia">
                     <option value="Causa del orientador" <?php if("Causa del orientador" == $datos_usuario["Info_ausencia"]){ echo "selected";}?> >Causa del orientador</option>
                     <option value="Justificada" <?php if("Justificada" == $datos_usuario["Info_ausencia"]){ echo "selected";}?> >Justificada</option>
+                    <option value="Colocación" <?php if("Colocación" == $datos_usuario["Info_ausencia"]){ echo "selected";}?> >Colocación</option>
+                    <option value="Desinterés" <?php if("Desinterés" == $datos_usuario["Info_ausencia"]){ echo "selected";}?> >Desinterés</option>
+                    <option value="No localizado" <?php if("No localizado" == $datos_usuario["Info_ausencia"]){ echo "selected";}?> >No localizado</option>
                 </select>
             </td>
         </tr>
