--- a/vistas/nuevo_alumno.html
+++ b/vistas/nuevo_alumno.html
@@ -73,6 +73,9 @@ function mostrar_carnet(carnet) {
 					<option> </option>
 					<option>Causa del orientador</option>
 					<option>Justificada</option>
+                    <option>Colocación</option>
+                    <option>Desinterés</option>
+                    <option>No localizado</option>
 				</select>
 			</td>
 			</tr>
