Tabla con el recuento
creé una funcion de sql que contaba por mes lo especificado e hice una tabla

--- a/vistas/edita_alumno.html
+++ b/vistas/edita_alumno.html
@@ -156,8 +156,9 @@
             <td>
                 <select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_atencion">
                     <option value="AP" <?php if("AP" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >AP</option>
-                    <option value="IPI" <?php if("IPI" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >IPI</option>
-                    <option value="IPI GX" <?php if("IPI GX" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >IPI GX</option>
+                    <option value="PP" <?php if("PP" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >IPI</option>
+                    <option value="AE" <?php if("AE" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >IPI GX</option>
+                    <option value="SE" <?php if("SE" == $datos_usuario["Tipo_atencion"]){ echo "selected";}?> >IPI GX</option>
                 </select>
             </td>
         </tr>
