--- a/vistas/nuevo_alumno.html
+++ b/vistas/nuevo_alumno.html
@@ -150,8 +150,9 @@ function mostrar_carnet(carnet) {
                 <th>Tipo de atención</th>
                 <td><select class="form-select form-select-sm" aria-label=".form-select-lg example" name="tipo_atencion">
                     <option>AP</option>
-                    <option>IPI</option>
-                    <option>IPI GX</option>
+                    <option>PP</option>
+                    <option>AE</option>
+                    <option>SE</option>
                 </select></td>
             </tr>
             <tr>
