actualizar los datos de info

--- a/vistas/principal.html
+++ b/vistas/principal.html
@@ -12,16 +12,17 @@
             <li>Añadir un nuevo alumno</li>
             <li>Editar un alumno</li>
             <li>Eliminar un alumno</li>
-        </ul>
-        <br>
-       ¿Qué nos queda? <br>
-       <ul>
-        <li>El tema de sacar gráficas</li>
-        <li>Hacer un recuento del total de personas atendidas </li>
+            <li>Hacer un recuento del total de personas atendidas </li>
         <li>Hacer un recuento del total de personas que asistieron a la entrevista</li>
         <li>De esas citas cuantas son IPI y cuantas no lo son</li>
         <li>De las que son IPI, cuantas son de GX y cuantas no.</li>
         <li>Esta tabla tiene que generarla desagregada por mes y haciendo el sumatorio en cada una de las columnas</li>
+        </ul>
+        <br>
+       ¿Qué nos queda? <br>
+       <ul>
+        <li>El tema de sacar gráficas por mes a partir de los datos de la tabla</li>
+        
        </ul>
     </div>
     <br><br>
