Confirmación para eliminar alumno

--- a/vistas/listado_alumnos.html
+++ b/vistas/listado_alumnos.html
@@ -81,7 +81,7 @@
                         <td><?= $alumno["Tipo_atencion"]; ?></td>
                         <td><?= $alumno["Discapacidad"]; ?></td>
                         <td><a href="edita_alumno.php?id=<?= $alumno['id']?>" class="btn btn-outline-primary btn-sm">Editar</a></td>
-                        <td><a href="eliminar_alumno.php?id=<?= $alumno['id']?>" class="btn btn-outline-danger btn-sm">Eliminar</a></td>
+                        <td><a href="eliminar_alumno.php?id=<?= $alumno['id']?>"  onclick='return confirm("¿Esta seguro?");'class="btn btn-outline-danger btn-sm">Eliminar</a></td>
                     </tr>
                     <?php  } ?>   
     </div>
