--- a/vistas/principal.html
+++ b/vistas/principal.html
@@ -106,16 +106,16 @@
             <button onclick="exportarTablaAExcel('la_tabla', 'datos.xlsx')"class="btn btn-outline-primary btn-sm">Descargar como Excel</button>
         </div>
         <div class="col-sm-8">
-            <h5 align="center">Gráfica de barras dobles Plotly</h5>
+            <h5 align="center">Gráfica de barras</h5>
             <div id='myDiv' style="width: 950px;"><!-- Plotly chart will be drawn inside this DIV --></div>
         </div>
     </div>
 </div>
 <div class="container mt-4">
     <div class="row">
-        <div class="col-sm-4">
-            <h5 align="center">Gráfica circular</h5>
-            <canvas id="chart1" style="width:80%;" height="80"></canvas><!--Utilizada para dibujar gráficos-->
+        <div class="col-sm-6">
+            <h5 align="center">Gráfica circular Julio</h5>
+            <div id='circular' style="width: 850px;"><!-- Plotly chart will be drawn inside this DIV --></div>
         </div>
     </div>  
 </div>
